# nanika_bot

./: .gitignore  .isort.cfg  README.md  app.py  application.yml  pyproject.toml
anathema/: datetime_curse.py
cogs/: buttons.py  internet.py  magic.py  music.py  myself.py  rng.py  tesseract.py
cogs/self/: __init__.py  blame.py  self.py
cogs/warframe/: __init__.py  solnodes.json  warframe.py  wfm.py
core/: __init__.py  bot.py  checks.py  cog.py  command.py  config.py  context.py  i10n.py  navi.py  trace.py
migrations/: n0_button-roles.sql  n3_prefixes.sql  n4_blame.sql
utils/: __init__.py
